@@ -1,7 +1,7 @@
 /***************************************************************************
  *             GLATObservation.hpp - Fermi/LAT observation class           *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2008-2014 by Juergen Knoedlseder                         *
+ *  copyright (C) 2008-2016 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -29,12 +29,14 @@
 
 /* __ Includes ___________________________________________________________ */
 #include <string>
+#include "GTime.hpp"
 #include "GObservation.hpp"
 #include "GLATResponse.hpp"
 #include "GLATLtCube.hpp"
-#include "GTime.hpp"
-#include "GModel.hpp"
-#include "GModels.hpp"
+
+/* __ Forward declarations _______________________________________________ */
+class GResponse;
+class GXmlElement;
 
 
 /***********************************************************************//**
@@ -64,7 +66,7 @@ public:
     virtual std::string         instrument(void) const;
     virtual double              ontime(void) const;
     virtual double              livetime(void) const;
-    virtual double              deadc(const GTime& time) const;
+    virtual double              deadc(const GTime& time = GTime()) const;
     virtual void                read(const GXmlElement& xml);
     virtual void                write(GXmlElement& xml) const;
     virtual std::string         print(const GChatter& chatter = NORMAL) const;
